Refactored /enums and exception files; updated comments; refactored and updated comments in the related test files